GNB collapse fix
로고영역과 네비 영역 다르게 트랜지션되던 것 교정

--- a/itemscout-branding.scss
+++ b/itemscout-branding.scss
@@ -81,8 +81,8 @@ a,
         .gnb {
             width: 100px;
             h1 {
-                padding: 0;
-                justify-content: center;
+                margin: 0;
+                padding: 0 36px;
                 img:last-child {
                     display: none;
                     opacity: 0;
@@ -157,10 +157,12 @@ a,
     h1 {
         display: flex;
         align-items: center;
-        margin: 0;
-        padding: 0 50px;
+        margin: 0 24px;
+        padding: 0 24px;
+        border: 1px solid transparent;
         height: 80px;
         border-bottom: 1px solid $border;
+        transition: all .2s ease-in-out;
         img {
             height: 24px;
             &:last-child {
